# tap-aws-s3

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml  test.yml
tap_aws_s3/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
